k8s/doorman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doorman-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: doormanApp
  template:
    metadata:
      labels:
        component: doormanApp
    spec:
      containers:
        - name: doorman
          image: ramonnuns/cerberus-doorman
          command: ["./wait-for-it.sh", "rabbit_cerberus:5672","--", "java", "-jar", "target/doorman-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
