k8s/gate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gate-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: gateApp
  template:
    metadata:
      labels:
        component: gateApp
    spec:
      containers:
        - name: gate
          image: ramonnuns/cerberus-gate
          command: ["./wait-for-it.sh", "rabbit_cerberus:5672","--", "java", "-jar", "target/doorman-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8081
