k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: ramonnuns/cerberus-postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /data/postgres
              name: postgres-volume
              subPath: postgres
      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-persistent-volume-claim
