k8s/doorman-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doorman-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: doormanApp
  ports:
    - ports: 8080
      targetPort: 8080
