k8s/gate-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gateApp
  ports:
    - port: 8081  
      targetPort: 8081
