k8s/rabbit-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 1883
    targetPort: 1883
  selector:
    app: rabbitmq
